# stockcli

./: Makefile  README.md  pyproject.toml  stockcli.py
.github/workflows/: ci.yml
tests/: test_stockcli.py
